templates/docker-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/proxy-body-size: '0' #disable the maximum allowed size of the client request body, to prevent push error for large image
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~ "/.*" {
        root $request_uri;
        chunked_transfer_encoding on;
        proxy_buffering off;
        proxy_read_timeout 900;
        client_max_body_size 0 ;
        proxy_set_header X-Forwarded-Host $host:$server_port;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-Server $host;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_pass $scheme://nexus.${NAMESPACE}.dev.nuxeo.com/repository/docker-registry$request_uri;
      }
  generation: 5
  labels:
    provider: fabric8
  name: docker
  namespace: "${NAMESPACE}"
spec:
  rules:
  - host: docker.${NAMESPACE}.dev.nuxeo.com
    http:
      paths:
      - backend:
          serviceName: nexus
          servicePort: 80
  tls:
  - hosts:
    - docker.${NAMESPACE}.dev.nuxeo.com
    secretName: "${NAMESPACE}-tls"
